--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 
 <div id="map" style="height: 500px; width:100%; position:absolute"></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCf6AvQXHUI5sAu4gBF2uV2IV7LH0Woy-c"
+<script src="https://maps.googleapis.com/maps/api/js?key=my_API_key"
         async defer></script>
 </body>
 </html>
